miscellaneous, see next lines more aria-label translated don't use minus but ndash div not ul if it isn't a real list avoid unnecessary spaces in html title on parent element only no button inside link link doesn't need role button if href is present

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -271,7 +271,7 @@
 
   {% if App.Request.query.has('templateid') %}
     <a href='?tab=4' class='btn hl-hover-gray'>
-      <i class='fas fa-chevron-left mr-1'></i>{{ 'Back to listing'|trans }}
+      <i class='fas fa-chevron-left mr-1 fa-fw'></i>{{ 'Back to listing'|trans }}
     </a>
   {% else %}
       <ul class='list-group form-group sortable' data-axis='y' data-table='items_types'>
