--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -24,7 +24,7 @@
       <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline createTagInputFavorite' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
       <div class='input-group-append'>
         <button class='btn btn-primary' type='button' title='{{ 'Add'|trans }}' data-action='create-todoitem' aria-label='{{ 'Add'|trans }}'>
-          <i class='fas fa-plus fa-fw' title='{{ 'Add'|trans }}'></i>
+          <i class='fas fa-plus fa-fw'></i>
         </button>
       </div>
     </div>
