--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -38,11 +38,11 @@
       <hr>
     {% endif %}
     <h5>{{ 'Last modified experiments'|trans }}</h5>
-    <ul class='list-group mt-1'>
+    <div class='list-group mt-1'>
       {% for experiment in experimentsArr %}
       <a href='experiments.php?mode=view&id={{ experiment.id }}' class='list-group-item hl-hover-gray breakable'>{% if experiment.category_title %}<span style='--bg: #{{ experiment.category_color }}' class='catstat-btn category-btn mr-2'>{{ experiment.category_title|raw }}</span>{% endif %}{{ experiment.title|raw }} <span title='{{ experiment.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
       {% endfor %}
-    </ul>
+    </div>
   </div>
   <div class='col-md-4 mt-2 mt-md-0'>
     <div class='d-flex justify-content-between'>
@@ -67,22 +67,22 @@
       <hr>
     {% endif %}
     <h5>{{ 'Last modified resources'|trans }}</h5>
-    <ul class='list-group mt-1'>
+    <div class='list-group mt-1'>
       {% for item in itemsArr %}
       <a href='database.php?mode=view&id={{ item.id }}' class='list-group-item hl-hover-gray breakable'>{% if item.category_title %}<span style='--bg: #{{ item.category_color }}' class='catstat-btn category-btn mr-2'>{{ item.category_title }}</span>{% endif %}{{ item.title|raw }} <span title='{{ item.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
       {% endfor %}
-    </ul>
+    </div>
   </div>
   <div class='col-md-4 mt-2 mt-md-0'>
     <div class='d-flex justify-content-between'>
       <h4>{{ 'Scheduled bookings'|trans }}</h4>
       <a href='team.php?tab=1' class='btn btn-secondary'>{{ 'Scheduler'|trans }}</a>
     </div>
-    <ul class='list-group mt-1'>
+    <div class='list-group mt-1'>
       {% for booking in bookingsArr %}
       <a href='team.php?tab=1&item={{ booking.items_id }}&start={{ booking.start|url_encode }}' class='list-group-item hl-hover-gray'><span style='color: {{ booking.color }}'>{{ booking.title|raw }}</span> <span title='{{ booking.start|date('Y-m-d H:i:s') }}' class='relative-moment text-nowrap smallgray'></span></a>
       {% endfor %}
-    </ul>
+    </div>
   </div>
 </div>
 
