--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -44,7 +44,7 @@
 <nav class='navbar navbar-expand-lg navbar-dark'>
     {% if App.Session.has('is_auth') %}
     {# hamburger menu #}
-    <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#main-nav' aria-controls='main-nav' aria-expanded='false' aria-label='Toggle navigation'>
+    <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#main-nav' aria-controls='main-nav' aria-expanded='false' aria-label='{{ 'Toggle navigation'|trans }}'>
         <span class='navbar-toggler-icon'></span>
     </button>
     {% endif %}
